[gd_scene load_steps=23 format=2]

[ext_resource path="res://Assets/Characters/test character.png" type="Texture" id=1]
[ext_resource path="res://bin/player.gdns" type="Script" id=2]
[ext_resource path="res://Assets/Others/maintiles.tres" type="TileSet" id=3]
[ext_resource path="res://Assets/Others/paper background.png" type="Texture" id=4]
[ext_resource path="res://Assets/Others/fonts/true-crimes.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://GUI.gd" type="Script" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 136.496

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 5 )

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0 )
colors = PoolColorArray( 0.133333, 0.25098, 0.129412, 1 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[sub_resource type="Gradient" id=5]
offsets = PoolRealArray( 0 )
colors = PoolColorArray( 0.141176, 0.356863, 0.172549, 1 )

[sub_resource type="GradientTexture" id=6]
gradient = SubResource( 5 )

[sub_resource type="Gradient" id=7]
offsets = PoolRealArray( 0 )
colors = PoolColorArray( 0.133333, 0.54902, 0.105882, 1 )

[sub_resource type="GradientTexture" id=8]
gradient = SubResource( 7 )

[sub_resource type="DynamicFont" id=9]
size = 30
font_data = ExtResource( 5 )

[sub_resource type="Gradient" id=10]
offsets = PoolRealArray( 0 )
colors = PoolColorArray( 0.223529, 0.627451, 0.152941, 1 )

[sub_resource type="GradientTexture" id=11]
gradient = SubResource( 10 )

[sub_resource type="Gradient" id=12]
offsets = PoolRealArray( 0 )
colors = PoolColorArray( 0.254902, 0.611765, 0.203922, 1 )

[sub_resource type="GradientTexture" id=13]
gradient = SubResource( 12 )

[sub_resource type="DynamicFont" id=14]
size = 22
font_data = ExtResource( 5 )

[sub_resource type="Gradient" id=15]
offsets = PoolRealArray( 0 )
colors = PoolColorArray( 0.176471, 0.286275, 0.152941, 1 )

[sub_resource type="GradientTexture" id=16]
gradient = SubResource( 15 )

[node name="Main" type="Node"]

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
cell_size = Vector2( 32, 32 )
collision_layer = 32
collision_mask = 0
format = 1
tile_data = PoolIntArray( -262129, 12, 0, -196595, 12, 0, -196594, 6, 0, -196593, 6, 0, -196592, 6, 0, -196591, 12, 0, -196587, 12, 0, -196586, 12, 0, -196585, 12, 0, -196584, 12, 0, -196583, 12, 0, -196582, 12, 0, -196581, 12, 0, -196579, 12, 0, -196578, 12, 0, -65539, 12, 0, -65538, 12, 0, -65537, 12, 0, -131072, 12, 0, -131071, 12, 0, -131070, 12, 0, -131069, 12, 0, -131068, 12, 0, -131067, 12, 0, -131066, 10, 0, -131065, 10, 0, -131064, 12, 0, -131063, 12, 0, -131062, 12, 0, -131061, 12, 0, -131060, 12, 0, -131059, 6, 0, -131058, 6, 0, -131057, 12, 0, -131056, 6, 0, -131055, 6, 0, -131054, 6, 0, -131053, 12, 0, -131052, 12, 0, -131051, 12, 0, -131050, 12, 0, -131049, 12, 0, -131048, 17, 0, -131047, 12, 0, -131046, 12, 0, -131045, 6, 0, -131044, 12, 0, -131043, 12, 0, -131042, 12, 0, -131041, 12, 0, -131040, 12, 0, -131039, 12, 0, -131038, 12, 0, -4, 12, 0, -3, 12, 0, -2, 10, 0, -1, 12, 0, -65536, 12, 0, -65535, 6, 0, -65534, 12, 0, -65533, 12, 0, -65532, 10, 0, -65531, 12, 0, -65530, 12, 0, -65529, 10, 0, -65528, 6, 0, -65527, 6, 0, -65526, 6, 0, -65525, 12, 0, -65524, 12, 0, -65523, 6, 0, -65522, 26, 0, -65521, 26, 0, -65520, 26, 0, -65519, 12, 0, -65518, 6, 0, -65517, 6, 0, -65516, 17, 0, -65515, 12, 0, -65514, 12, 0, -65513, 12, 0, -65512, 17, 0, -65511, 12, 0, -65510, 26, 0, -65509, 26, 0, -65508, 12, 0, -65507, 12, 0, -65506, 10, 0, -65505, 10, 0, -65504, 6, 0, -65503, 6, 0, -65502, 10, 0, -65501, 12, 0, -65500, 12, 0, -65499, 12, 0, 65532, 12, 0, 65533, 10, 0, 65534, 12, 0, 65535, 12, 0, 0, 12, 0, 1, 26, 0, 2, 26, 0, 3, 12, 0, 4, 10, 0, 5, 17, 0, 6, 12, 0, 7, 26, 0, 8, 26, 0, 9, 17, 0, 10, 17, 0, 11, 6, 0, 12, 26, 0, 13, 6, 0, 14, 10, 0, 15, 10, 0, 16, 12, 0, 17, 12, 0, 18, 12, 0, 19, 10, 0, 20, 10, 0, 21, 12, 0, 22, 17, 0, 23, 6, 0, 24, 26, 0, 25, 26, 0, 26, 6, 0, 27, 17, 0, 28, 26, 0, 29, 10, 0, 30, 10, 0, 31, 12, 0, 32, 12, 0, 33, 12, 0, 34, 10, 0, 35, 12, 0, 36, 12, 0, 37, 12, 0, 131067, 17, 0, 131068, 12, 0, 131069, 12, 0, 131070, 12, 0, 131071, 12, 0, 65536, 17, 0, 65537, 17, 0, 65538, 17, 0, 65539, 6, 0, 65540, 12, 0, 65541, 17, 0, 65542, 6, 0, 65543, 17, 0, 65544, 26, 0, 65545, 12, 0, 65546, 10, 0, 65547, 10, 0, 65548, 26, 0, 65549, 12, 0, 65550, 10, 0, 65551, 17, 0, 65552, 12, 0, 65553, 26, 0, 65554, 26, 0, 65555, 12, 0, 65556, 12, 0, 65557, 12, 0, 65558, 17, 0, 65559, 6, 0, 65560, 12, 0, 65561, 6, 0, 65562, 12, 0, 65563, 12, 0, 65564, 10, 0, 65565, 10, 0, 65566, 12, 0, 65567, 12, 0, 65568, 12, 0, 65569, 10, 0, 65570, 26, 0, 65571, 10, 0, 65572, 10, 0, 65573, 12, 0, 196603, 12, 0, 196604, 10, 0, 196605, 17, 0, 196606, 10, 0, 196607, 12, 0, 131072, 12, 0, 131073, 17, 0, 131074, 17, 0, 131075, 17, 0, 131076, 17, 0, 131077, 17, 0, 131078, 26, 0, 131079, 17, 0, 131080, 12, 0, 131081, 12, 0, 131082, 10, 0, 131083, 6, 0, 131084, 6, 0, 131085, 12, 0, 131086, 12, 0, 131087, 17, 0, 131088, 17, 0, 131089, 6, 0, 131090, 12, 0, 131091, 6, 0, 131092, 6, 0, 131093, 17, 0, 131094, 17, 0, 131095, 17, 0, 131096, 17, 0, 131097, 17, 0, 131098, 12, 0, 131099, 6, 0, 131100, 10, 0, 131101, 10, 0, 131102, 10, 0, 131103, 12, 0, 131104, 12, 0, 131105, 17, 0, 131106, 10, 0, 131107, 10, 0, 131108, 6, 0, 131109, 12, 0, 262139, 12, 0, 262140, 6, 0, 262141, 10, 0, 262142, 10, 0, 262143, 12, 0, 196608, 6, 0, 196609, 17, 0, 196610, 17, 0, 196611, 10, 0, 196612, 17, 0, 196613, 26, 0, 196614, 26, 0, 196615, 26, 0, 196616, 18, 0, 196617, 12, 0, 196618, 12, 0, 196619, 12, 0, 196620, 12, 0, 196621, 6, 0, 196622, 26, 0, 196623, 26, 0, 196624, 26, 0, 196625, 26, 0, 196626, 10, 0, 196627, 12, 0, 196628, 10, 0, 196629, 10, 0, 196630, 12, 0, 196631, 26, 0, 196632, 12, 0, 196633, 6, 0, 196634, 26, 0, 196635, 12, 0, 196636, 6, 0, 196637, 17, 0, 196638, 17, 0, 196639, 12, 0, 196640, 12, 0, 196641, 26, 0, 196642, 17, 0, 196643, 10, 0, 196644, 6, 0, 196645, 12, 0, 327675, 17, 0, 327676, 6, 0, 327677, 6, 0, 327678, 10, 0, 327679, 12, 0, 262144, 12, 0, 262145, 6, 0, 262146, 6, 0, 262147, 6, 0, 262148, 10, 0, 262149, 10, 0, 262150, 17, 0, 262151, 10, 0, 262152, 10, 0, 262153, 12, 0, 262154, 12, 0, 262155, 12, 0, 262156, 12, 0, 262157, 12, 0, 262158, 12, 0, 262159, 12, 0, 262160, 26, 0, 262161, 12, 0, 262162, 12, 0, 262163, 12, 0, 262164, 12, 0, 262165, 12, 0, 262166, 12, 0, 262167, 26, 0, 262168, 17, 0, 262169, 10, 0, 262170, 26, 0, 262171, 12, 0, 262172, 12, 0, 262173, 12, 0, 262174, 17, 0, 262175, 12, 0, 262176, 12, 0, 262177, 12, 0, 262178, 12, 0, 262179, 26, 0, 262180, 12, 0, 262181, 12, 0, 393211, 17, 0, 393212, 6, 0, 393213, 6, 0, 393214, 6, 0, 393215, 6, 0, 327680, 26, 0, 327681, 26, 0, 327682, 17, 0, 327683, 17, 0, 327684, 12, 0, 327685, 18, 0, 327686, 10, 0, 327687, 17, 0, 327688, 17, 0, 327689, 12, 0, 327690, 25, 0, 327691, 4, 0, 327692, 25, 0, 327694, 25, 0, 327696, 25, 0, 327698, 25, 0, 327700, 25, 0, 327701, 6, 0, 327702, 12, 0, 327703, 18, 0, 327704, 26, 0, 327705, 10, 0, 327706, 26, 0, 327707, 12, 0, 327708, 25, 0, 327709, 12, 0, 327710, 25, 0, 327712, 12, 0, 327713, 12, 0, 327714, 6, 0, 327715, 17, 0, 327716, 12, 0, 327717, 12, 0, 458747, 17, 0, 458748, 12, 0, 458749, 12, 0, 458750, 12, 0, 458751, 6, 0, 393216, 17, 0, 393217, 12, 0, 393218, 17, 0, 393219, 17, 0, 393220, 26, 0, 393221, 12, 0, 393222, 10, 0, 393223, 10, 0, 393224, 18, 0, 393225, 18, 0, 393226, 6, 0, 393238, 12, 0, 393239, 12, 0, 393240, 12, 0, 393241, 26, 0, 393242, 6, 0, 393243, 12, 0, 393244, 6, 0, 393247, 6, 0, 393248, 12, 0, 393249, 17, 0, 393250, 12, 0, 393251, 10, 0, 393252, 10, 0, 393253, 12, 0, 524283, 17, 0, 524284, 17, 0, 524285, 12, 0, 524286, 6, 0, 524287, 12, 0, 458752, 17, 0, 458753, 12, 0, 458754, 6, 0, 458755, 10, 0, 458756, 10, 0, 458757, 10, 0, 458758, 12, 0, 458759, 12, 0, 458760, 12, 0, 458761, 4, 0, 458762, 25, 0, 458764, 25, 0, 458766, 25, 0, 458768, 25, 0, 458770, 25, 0, 458772, 25, 0, 458774, 25, 0, 458775, 6, 0, 458776, 26, 0, 458777, 17, 0, 458778, 6, 0, 458779, 10, 0, 458780, 25, 0, 458782, 25, 0, 458784, 25, 0, 458785, 17, 0, 458786, 17, 0, 458787, 26, 0, 458788, 12, 0, 458789, 12, 0, 589821, 12, 0, 589822, 12, 0, 589823, 12, 0, 524288, 26, 0, 524289, 26, 0, 524290, 6, 0, 524291, 6, 0, 524292, 6, 0, 524293, 6, 0, 524294, 12, 0, 524295, 12, 0, 524296, 12, 0, 524297, 12, 0, 524298, 6, 0, 524301, 31, 0, 524312, 26, 0, 524313, 17, 0, 524314, 6, 0, 524315, 12, 0, 524322, 12, 0, 524323, 17, 0, 524324, 10, 0, 524325, 12, 0, 655359, 12, 0, 589824, 12, 0, 589825, 10, 0, 589826, 10, 0, 589827, 6, 0, 589828, 12, 0, 589829, 17, 0, 589830, 18, 0, 589831, 12, 0, 589832, 25, 0, 589834, 25, 0, 589836, 25, 0, 589838, 25, 0, 589840, 25, 0, 589842, 25, 0, 589844, 25, 0, 589845, 31, 0, 589846, 25, 0, 589848, 25, 0, 589849, 17, 0, 589850, 12, 0, 589851, 12, 0, 589852, 25, 0, 589854, 25, 0, 589856, 12, 0, 589857, 12, 0, 589858, 12, 0, 589859, 10, 0, 589860, 10, 0, 589861, 12, 0, 720895, 12, 0, 655360, 12, 0, 655361, 12, 0, 655362, 10, 0, 655363, 6, 0, 655364, 6, 0, 655365, 6, 0, 655366, 12, 0, 655367, 10, 0, 655368, 6, 0, 655386, 18, 0, 655387, 10, 0, 655391, 12, 0, 655392, 12, 0, 655393, 12, 0, 655394, 12, 0, 655395, 10, 0, 655396, 10, 0, 655397, 12, 0, 786431, 12, 0, 720896, 6, 0, 720897, 6, 0, 720898, 10, 0, 720899, 12, 0, 720900, 26, 0, 720901, 12, 0, 720902, 12, 0, 720903, 12, 0, 720904, 10, 0, 720905, 12, 0, 720906, 12, 0, 720907, 12, 0, 720908, 25, 0, 720910, 25, 0, 720912, 25, 0, 720914, 25, 0, 720916, 25, 0, 720918, 25, 0, 720920, 25, 0, 720922, 18, 0, 720923, 12, 0, 720924, 25, 0, 720926, 12, 0, 720927, 12, 0, 720928, 12, 0, 720929, 18, 0, 720930, 26, 0, 720931, 10, 0, 720932, 12, 0, 720933, 12, 0, 851967, 12, 0, 786432, 12, 0, 786433, 12, 0, 786434, 10, 0, 786435, 10, 0, 786436, 6, 0, 786437, 10, 0, 786438, 17, 0, 786439, 10, 0, 786440, 10, 0, 786441, 12, 0, 786442, 12, 0, 786443, 12, 0, 786457, 6, 0, 786458, 12, 0, 786459, 12, 0, 786461, 6, 0, 786462, 6, 0, 786463, 6, 0, 786464, 10, 0, 786465, 6, 0, 786466, 26, 0, 786467, 12, 0, 786468, 12, 0, 786469, 12, 0, 917503, 12, 0, 851968, 6, 0, 851969, 12, 0, 851970, 12, 0, 851971, 10, 0, 851972, 10, 0, 851973, 10, 0, 851974, 10, 0, 851975, 12, 0, 851976, 17, 0, 851977, 12, 0, 851978, 10, 0, 851979, 12, 0, 851980, 25, 0, 851982, 25, 0, 851984, 25, 0, 851986, 25, 0, 851988, 25, 0, 851989, 31, 0, 851990, 25, 0, 851992, 25, 0, 851993, 6, 0, 851994, 12, 0, 851995, 10, 0, 851996, 6, 0, 851997, 12, 0, 851998, 12, 0, 851999, 10, 0, 852000, 10, 0, 852001, 26, 0, 852002, 10, 0, 852003, 10, 0, 852004, 12, 0, 852005, 12, 0, 983039, 12, 0, 917504, 12, 0, 917505, 6, 0, 917506, 17, 0, 917507, 6, 0, 917508, 10, 0, 917509, 17, 0, 917510, 10, 0, 917511, 12, 0, 917512, 12, 0, 917513, 12, 0, 917514, 12, 0, 917515, 12, 0, 917516, 6, 0, 917519, 31, 0, 917530, 12, 0, 917531, 18, 0, 917532, 18, 0, 917533, 12, 0, 917534, 12, 0, 917535, 12, 0, 917536, 12, 0, 917537, 12, 0, 917538, 17, 0, 917539, 17, 0, 917540, 26, 0, 917541, 10, 0, 1048575, 12, 0, 983040, 6, 0, 983041, 17, 0, 983042, 12, 0, 983043, 17, 0, 983044, 10, 0, 983045, 6, 0, 983046, 12, 0, 983047, 12, 0, 983048, 10, 0, 983049, 10, 0, 983050, 12, 0, 983051, 12, 0, 983052, 25, 0, 983054, 25, 0, 983056, 25, 0, 983058, 25, 0, 983060, 25, 0, 983062, 25, 0, 983064, 25, 0, 983066, 12, 0, 983067, 12, 0, 983068, 25, 0, 983070, 25, 0, 983072, 12, 0, 983073, 12, 0, 983074, 18, 0, 983075, 12, 0, 983076, 6, 0, 983077, 12, 0, 1114111, 12, 0, 1048576, 12, 0, 1048577, 12, 0, 1048578, 12, 0, 1048579, 12, 0, 1048580, 17, 0, 1048581, 17, 0, 1048582, 6, 0, 1048583, 12, 0, 1048584, 12, 0, 1048585, 10, 0, 1048586, 10, 0, 1048587, 17, 0, 1048589, 6, 0, 1048601, 6, 0, 1048602, 12, 0, 1048603, 12, 0, 1048604, 6, 0, 1048608, 12, 0, 1048609, 12, 0, 1048610, 26, 0, 1048611, 26, 0, 1048612, 17, 0, 1048613, 12, 0, 1179647, 12, 0, 1114112, 12, 0, 1114113, 12, 0, 1114114, 12, 0, 1114115, 17, 0, 1114116, 26, 0, 1114117, 12, 0, 1114118, 10, 0, 1114119, 26, 0, 1114120, 17, 0, 1114121, 10, 0, 1114122, 10, 0, 1114123, 12, 0, 1114124, 12, 0, 1114125, 17, 0, 1114126, 12, 0, 1114127, 12, 0, 1114128, 25, 0, 1114130, 25, 0, 1114132, 17, 0, 1114133, 12, 0, 1114134, 18, 0, 1114135, 10, 0, 1114136, 12, 0, 1114137, 10, 0, 1114138, 6, 0, 1114139, 12, 0, 1114140, 12, 0, 1114141, 12, 0, 1114142, 25, 0, 1114144, 25, 0, 1114146, 12, 0, 1114147, 12, 0, 1114148, 12, 0, 1114149, 6, 0, 1245183, 12, 0, 1179648, 12, 0, 1179649, 12, 0, 1179650, 6, 0, 1179651, 12, 0, 1179652, 12, 0, 1179653, 10, 0, 1179654, 17, 0, 1179655, 10, 0, 1179656, 17, 0, 1179657, 12, 0, 1179658, 6, 0, 1179659, 6, 0, 1179660, 6, 0, 1179661, 12, 0, 1179662, 17, 0, 1179663, 17, 0, 1179664, 6, 0, 1179667, 6, 0, 1179668, 12, 0, 1179669, 12, 0, 1179670, 12, 0, 1179671, 10, 0, 1179672, 10, 0, 1179673, 10, 0, 1179674, 6, 0, 1179675, 12, 0, 1179676, 12, 0, 1179677, 12, 0, 1179678, 6, 0, 1179680, 6, 0, 1179681, 17, 0, 1179682, 17, 0, 1179683, 17, 0, 1179684, 17, 0, 1179685, 6, 0, 1310719, 12, 0, 1245184, 12, 0, 1245185, 17, 0, 1245186, 12, 0, 1245187, 12, 0, 1245188, 6, 0, 1245189, 12, 0, 1245190, 26, 0, 1245191, 26, 0, 1245192, 6, 0, 1245193, 6, 0, 1245194, 12, 0, 1245195, 12, 0, 1245196, 17, 0, 1245197, 17, 0, 1245198, 12, 0, 1245199, 10, 0, 1245200, 10, 0, 1245201, 12, 0, 1245202, 12, 0, 1245203, 6, 0, 1245204, 12, 0, 1245205, 12, 0, 1245206, 12, 0, 1245207, 12, 0, 1245208, 17, 0, 1245209, 17, 0, 1245210, 17, 0, 1245211, 6, 0, 1245212, 6, 0, 1245213, 18, 0, 1245214, 12, 0, 1245215, 12, 0, 1245216, 6, 0, 1245217, 17, 0, 1245218, 6, 0, 1245219, 12, 0, 1245220, 10, 0, 1245221, 12, 0, 1376255, -1073741807, 0, 1310720, 12, 0, 1310721, 17, 0, 1310722, 17, 0, 1310723, 12, 0, 1310724, 12, 0, 1310725, 10, 0, 1310726, 12, 0, 1310727, 12, 0, 1310728, 12, 0, 1310729, 6, 0, 1310730, 17, 0, 1310731, 12, 0, 1310732, 12, 0, 1310733, 17, 0, 1310734, 12, 0, 1310735, 12, 0, 1310736, 12, 0, 1310737, 6, 0, 1310738, 6, 0, 1310739, 12, 0, 1310740, 6, 0, 1310741, 6, 0, 1310742, 10, 0, 1310743, 10, 0, 1310744, 17, 0, 1310745, 6, 0, 1310746, 17, 0, 1310747, 6, 0, 1310748, 26, 0, 1310749, 6, 0, 1310750, 17, 0, 1310751, 6, 0, 1310752, 6, 0, 1310753, 6, 0, 1310754, 6, 0, 1310755, 17, 0, 1310756, 12, 0, 1310757, 12, 0, 1441791, -1073741807, 0, 1376256, 12, 0, 1376257, 12, 0, 1376258, 12, 0, 1376259, 17, 0, 1376260, 12, 0, 1376261, 6, 0, 1376262, 10, 0, 1376263, 6, 0, 1376264, 6, 0, 1376265, 12, 0, 1376266, 12, 0, 1376267, 6, 0, 1376268, 12, 0, 1376269, 12, 0, 1376270, 17, 0, 1376271, 6, 0, 1376272, 10, 0, 1376273, 12, 0, 1376274, 10, 0, 1376275, 10, 0, 1376276, 6, 0, 1376277, 12, 0, 1376278, 10, 0, 1376279, 10, 0, 1376280, 10, 0, 1376281, 12, 0, 1376282, 12, 0, 1376283, 10, 0, 1376284, 10, 0, 1376285, 17, 0, 1376286, 17, 0, 1376287, 10, 0, 1376288, 12, 0, 1376289, 26, 0, 1376290, 12, 0, 1376291, 17, 0, 1376292, 12, 0, 1376293, 12, 0, 1507327, -1073741807, 0, 1441792, -1073741807, 0, 1441793, 12, 0, 1441794, 12, 0, 1441795, 17, 0, 1441796, 12, 0, 1441797, 12, 0, 1441798, 12, 0, 1441799, 12, 0, 1441800, 26, 0, 1441801, 6, 0, 1441802, 6, 0, 1441803, 6, 0, 1441804, 26, 0, 1441805, 26, 0, 1441806, 17, 0, 1441807, 17, 0, 1441808, 17, 0, 1441809, 6, 0, 1441810, 12, 0, 1441811, 10, 0, 1441812, 17, 0, 1441813, 12, 0, 1441814, 10, 0, 1441815, 10, 0, 1441816, 10, 0, 1441817, 6, 0, 1441818, 12, 0, 1441819, 17, 0, 1441820, 6, 0, 1441821, 12, 0, 1441822, 6, 0, 1441823, 6, 0, 1441824, 12, 0, 1441825, 12, 0, 1441826, 12, 0, 1441827, 12, 0, 1441828, 12, 0, 1441829, 4, 0, 1507330, 12, 0, 1507331, 12, 0, 1507332, 12, 0, 1507333, 12, 0, 1507334, 17, 0, 1507335, 12, 0, 1507336, 12, 0, 1507337, 26, 0, 1507338, 12, 0, 1507339, 12, 0, 1507340, 12, 0, 1507341, 12, 0, 1507342, 17, 0, 1507343, 17, 0, 1507344, 26, 0, 1507345, 17, 0, 1507346, 6, 0, 1507347, 10, 0, 1507348, 17, 0, 1507349, 12, 0, 1507350, 12, 0, 1507351, 4, 0, 1507352, 12, 0, 1507353, 12, 0, 1507354, 12, 0, 1507355, 12, 0, 1507356, 6, 0, 1507357, 12, 0, 1507358, 10, 0, 1507359, 12, 0, 1507360, 12, 0, 1507361, 6, 0, 1507362, 12, 0, 1507363, 12, 0, 1507364, 12, 0 )

[node name="map" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
cell_size = Vector2( 32, 32 )
collision_layer = 16
collision_mask = 3
format = 1
tile_data = PoolIntArray( -196611, 49, 0, -262141, 72, 0, -262137, 72, 0, -262133, 52, 0, -262127, 52, 0, -262121, 53, 0, -262115, 53, 0, -131074, 84, 0, -196605, 84, 0, -196598, 84, 0, -196588, 84, 0, -196573, 72, 0, -196570, 55, 0, -65540, 56, 0, -131064, 82, 0, -131053, 82, 0, -131043, 84, 0, -131037, 84, 0, -5, 56, 0, -65520, 67, 0, -65512, 83, 0, 65531, 51, 0, 0, 82, 0, 37, 82, 0, 38, 55, 0, 196603, 56, 0, 196613, 67, 0, 196637, 67, 0, 196646, 55, 0, 393211, 56, 0, 327697, 83, 0, 327700, 65, 0, 393254, 55, 0, 524285, 83, 0, 589819, 44, 0, 589821, 45, 0, 589822, 84, 0, 589823, 56, 0, 589856, 67, 0, 589862, 55, 0, 655363, 67, 0, 655370, 83, 0, 655396, 83, 0, 786431, 56, 0, 786456, 83, 0, 786470, 55, 0, 983039, 56, 0, 917515, 65, 0, 983070, 67, 0, 983078, 55, 0, 1048599, 65, 0, 1179647, 56, 0, 1114112, 83, 0, 1114116, 67, 0, 1114129, 83, 0, 1179686, 55, 0, 1376255, 56, 0, 1376267, 83, 0, 1441830, 51, 0, 1572863, 40, 0, 1507330, 84, 0, 1507331, 40, 0, 1507333, 84, 0, 1507335, 42, 0, 1507337, 40, 0, 1507338, 84, 0, 1507339, 40, 0, 1507341, 46, 0, 1507343, 45, 0, 1507345, 45, 0, 1507346, 84, 0, 1507347, 43, 0, 1507349, 44, 0, 1507351, 43, 0, 1507353, 40, 0, 1507358, 40, 0, 1507359, 84, 0, 1507363, 46, 0, 1507365, 44, 0, 1638399, 64, 0, 1572864, 64, 0, 1572865, 64, 0, 1572866, 64, 0, 1572867, 64, 0, 1572868, 64, 0, 1572870, 64, 0, 1572871, 64, 0, 1572872, 64, 0, 1572873, 64, 0, 1572874, 64, 0, 1572875, 64, 0, 1572877, 64, 0, 1572878, 64, 0, 1572879, 64, 0, 1572880, 64, 0, 1572881, 64, 0, 1572882, 64, 0, 1572883, 64, 0, 1572884, 64, 0, 1572885, 64, 0, 1572886, 64, 0, 1572887, 64, 0, 1572888, 64, 0, 1572889, 64, 0, 1572890, 64, 0, 1572891, 64, 0, 1572892, 64, 0, 1572893, 64, 0, 1572894, 64, 0, 1572895, 64, 0, 1572896, 64, 0, 1572897, 64, 0, 1572899, 64, 0, 1572901, 64, 0 )

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( 519.246, 345.953 )
rotation = -3.14159
collision_mask = 16
script = ExtResource( 2 )
"rate of fire" = 0.3

[node name="Sprite" type="Sprite" parent="Player"]
position = Vector2( 3.56361, -3.56359 )
scale = Vector2( 0.19909, 0.207447 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2( -3.27319, -0.872559 )
scale = Vector2( 0.103, 0.101 )
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="Player"]
visible = false
current = true
zoom = Vector2( 0.7, 0.7 )
smoothing_enabled = true

[node name="GUI" type="CanvasLayer" parent="."]
script = ExtResource( 6 )

[node name="Pause_Menu" type="Control" parent="GUI"]
pause_mode = 2
visible = false
anchor_left = 0.507
anchor_top = 0.577
anchor_right = 0.507
anchor_bottom = 0.577
margin_left = -122.741
margin_top = -189.517
margin_right = 127.259
margin_bottom = 210.483
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="GUI/Pause_Menu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 3.05176e-05
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/Pause_Menu"]
anchor_left = -0.005
anchor_right = 1.0
anchor_bottom = 1.005
margin_left = 2.25
margin_top = 20.0
margin_bottom = -1.00006
custom_constants/separation = 24
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GUI/Pause_Menu/VBoxContainer"]
margin_right = 248.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0.952941, 0.894118, 0.894118, 1 )
custom_colors/font_color_shadow = Color( 0.188235, 0.188235, 0.188235, 1 )
text = "Pause Menu"
align = 1
uppercase = true

[node name="MarginContainer" type="MarginContainer" parent="GUI/Pause_Menu/VBoxContainer"]
margin_top = 48.0
margin_right = 248.0
margin_bottom = 83.0
rect_min_size = Vector2( 0, 35 )

[node name="Resume" type="TextureButton" parent="GUI/Pause_Menu/VBoxContainer"]
margin_left = 23.0
margin_top = 107.0
margin_right = 223.0
margin_bottom = 157.0
rect_min_size = Vector2( 200, 50 )
size_flags_horizontal = 4
texture_normal = SubResource( 4 )
texture_pressed = SubResource( 6 )
texture_hover = SubResource( 8 )
expand = true

[node name="Label" type="Label" parent="GUI/Pause_Menu/VBoxContainer/Resume"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 9 )
text = "Resume"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bullet Change" type="TextureButton" parent="GUI/Pause_Menu/VBoxContainer"]
margin_left = 23.0
margin_top = 181.0
margin_right = 223.0
margin_bottom = 231.0
rect_min_size = Vector2( 200, 50 )
size_flags_horizontal = 4
texture_normal = SubResource( 4 )
texture_pressed = SubResource( 6 )
texture_hover = SubResource( 11 )
expand = true

[node name="Label" type="Label" parent="GUI/Pause_Menu/VBoxContainer/Bullet Change"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 9 )
text = "Bullets"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quite Game" type="TextureButton" parent="GUI/Pause_Menu/VBoxContainer"]
margin_left = 23.0
margin_top = 255.0
margin_right = 223.0
margin_bottom = 305.0
rect_min_size = Vector2( 200, 50 )
size_flags_horizontal = 4
texture_normal = SubResource( 4 )
texture_pressed = SubResource( 6 )
texture_hover = SubResource( 13 )
expand = true

[node name="Label" type="Label" parent="GUI/Pause_Menu/VBoxContainer/Quite Game"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 9 )
text = "quite game"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bullet_Menu" type="Control" parent="GUI"]
visible = false
anchor_left = 0.511
anchor_top = 0.577
anchor_right = 0.511
anchor_bottom = 0.577
margin_left = -139.356
margin_top = -140.041
margin_right = 138.644
margin_bottom = -3.04089
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="GUI/Bullet_Menu"]
anchor_right = 1.0
anchor_bottom = 0.993
margin_bottom = 0.959
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="TextEdit" parent="GUI/Bullet_Menu/NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 29.2045
margin_top = 17.6818
margin_right = -33.7955
margin_bottom = -76.3182
custom_fonts/font = SubResource( 14 )
text = "Singl;e Shot"
breakpoint_gutter = true
fold_gutter = true

[node name="TextureButton" type="TextureButton" parent="GUI/Bullet_Menu/NinePatchRect"]
anchor_left = 0.661
anchor_top = 0.73
anchor_right = 0.661
anchor_bottom = 0.73
margin_left = -183.758
margin_top = -100.01
margin_right = 1864.24
margin_bottom = -80.01
texture_normal = SubResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="GUI/Pause_Menu/VBoxContainer/Resume" to="GUI" method="_on_Resume_pressed"]
[connection signal="pressed" from="GUI/Pause_Menu/VBoxContainer/Quite Game" to="GUI" method="_on_Quite_Game_pressed"]
